// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sprint Zebra - Fase 1 - Contratos, Escaping e Guards > ZPL Batch Generation Snapshots (generator.ts) > deve escapar carets e tildes e injetar quebras de linha corretamente 1`] = `
"^XA
^PW800
^LL480
^LH0,0
^CI28
^FO21,21
^A0N,25,23
^FB169,1,0,C,0
^FH_
^FDFrango _5EEspecial_7E^FS
^FO21,53
^A0N,21,19
^FB169,1,0,L,0
^FH_
^FDAna_5CMaria^FS
^FO21,85
^A0N,17,15
^FB169,2,0,L,0
^FH_
^FDLinha 1\\&Linha 2^FS
^XZ

"
`;

exports[`Sprint Zebra - Fase 1 - Contratos, Escaping e Guards > ZPL Batch Generation Snapshots (generator.ts) > deve gerar ZPL correto para payload completo 1`] = `
"^XA
^PW800
^LL480
^LH0,0
^CI28
^FO21,21
^A0N,25,23
^FB169,1,0,C,0
^FH_
^FDLasanha de Berinjela^FS
^FO21,53
^A0N,21,19
^FB169,1,0,L,0
^FH_
^FDJoão Da Silva^FS
^FO21,85
^A0N,17,15
^FB169,2,0,L,0
^FH_
^FDBerinjela, molho de tomate, queijo.^FS
^XZ

"
`;

exports[`Sprint Zebra - Fase 1 - Contratos, Escaping e Guards > ZPL Batch Generation Snapshots (generator.ts) > deve gerar barcode Code 128 nativo para ID curto 1`] = `
"^XA
^PW800
^LL480
^LH0,0
^CI28
^FO21,21
^BY2
^BCN,64,Y,N,N
^FD#123456^FS
^XZ

"
`;

exports[`Sprint Zebra - Fase 1 - Contratos, Escaping e Guards > ZPL Batch Generation Snapshots (generator.ts) > deve gerar barcode Code 128 para lote em 300dpi 1`] = `
"^XA
^PW1200
^LL720
^LH0,0
^CI28
^FO32,32
^BY2
^BCN,95,Y,N,N
^FDLOTE-07^FS
^XZ

"
`;

exports[`Sprint Zebra - Fase 1 - Contratos, Escaping e Guards > ZPL Batch Generation Snapshots (generator.ts) > deve renderizar tabela nutricional textual estruturada no lote 1`] = `
"^XA
^PW800
^LL480
^LH0,0
^CI28
^FO21,21
^A0N,15,14
^FB169,16,0,L,0
^FH_
^FDINFORMACAO NUTRICIONAL\\&PORCAO 300g\\&NUTRIENTE | QTD\\&Energia kcal: 350kcal\\&Energia kJ: 1.464kJ\\&Carboidratos: 40,0g\\&Acucares totais: 4,0g\\&Acucares adicionados: 1,0g\\&Proteinas: 30,0g\\&Gorduras totais: 12,0g\\&Gorduras saturadas: 3,0g\\&Gorduras trans: 0,0g\\&Fibra alimentar: 6,0g\\&Sodio: 420mg^FS
^XZ

"
`;

exports[`Sprint Zebra - Fase 1 - Contratos, Escaping e Guards > ZPL Batch Generation Snapshots (generator.ts) > deve usar fallback compacto para tabela nutricional em area pequena no lote 1`] = `
"^XA
^PW800
^LL480
^LH0,0
^CI28
^FO21,21
^A0N,15,14
^FB169,8,0,L,0
^FH_
^FDINFORMACAO NUTRICIONAL\\&PORCAO --\\&NUTRIENTE | QTD | %VD\\&Energia kcal: 350kcal | 18%\\&Carboidratos: 40,0g | --\\&Proteinas: 30,0g | --\\&Gorduras totais: 12,0g | --\\&Sodio: 420mg | 21%^FS
^XZ

"
`;
